Added new routes and bugfix
