# server/src/controllers/user.controller.ts
@@ -1,7 +1,14 @@
 import { Route, Post, Body, Controller, SuccessResponse, Tags, Response } from 'tsoa';
-import { IResponse } from '../models/IResponse.interface';
-import { LoginUser } from '../models/loginUser.interface';
-import { RegisterUser } from '../models/registerUser.interface';
+import { IResponse } from '../interfaces/IResponse.interface';
+import { LoginUser } from '../interfaces/loginUser.interface';
+import { RegisterUser } from '../interfaces/registerUser.interface';
+
+// Statikus adat
+let users = [
+    { id: 0, name: "Teszt Elek", email: "teszt@elek.hu", password: "tesztelek0"},
+    { id: 1, name: "Teszt Tamás", email: "teszt@tamas.hu", password: "teszttamas1"},
+    { id: 2, name: "Teszt Béla", email: "teszt@bela.hu", password: "tesztbela2"}
+];
 
 @Route('/user')
 export class UserController extends Controller {
@@ -11,24 +18,28 @@ export class UserController extends Controller {
     @Response<IResponse>('400', 'Bad Request')
     public async loginUser(@Body() body: LoginUser): Promise<IResponse> {
         try {
-            const user = {
-                id: 0,
-                email: body.email,
-                password: body.password
-            };
+            let user = users.find(x => x.email == body.email);
 
-            return {
-                message: 'OK',
-                status: '200',
-                data: user
-            };
+            if(user) {
+                if(user.password == body.password) {
+                    return {
+                        message: 'OK',
+                        status: '200',
+                        data: user
+                    }
+                } else {
+                    throw new Error('Hibás jelszó!');
+                }
+            } else {
+                throw new Error('Nincs regisztrált felhasználó ezzel az email címmel!');
+            }
         } catch(err) {
             this.setStatus(400);
 
             return {
                 message: 'Error',
                 status: '400',
-                data: err
+                data: err.message
             };
         }
     }
@@ -50,7 +61,7 @@ export class UserController extends Controller {
             return {
                 message: 'Error',
                 status: '400',
-                data: err
+                data: err.message
             };
         }
     }
@@ -61,24 +72,33 @@ export class UserController extends Controller {
     @Response<IResponse>('400', 'Bad Request')
     public async registerUser(@Body() body: RegisterUser): Promise<IResponse> {
         try {
-            if(body.password == body.passwordAgain) {
-                const user = {
-                    email: body.email,
-                    password: body.password
-                };
+            if(users.find(x => x.email == body.email) == undefined) {
+                if(body.password == body.passwordAgain) {
+                    let user = {
+                        id: users[users.length - 1].id + 1,
+                        name: body.name,
+                        email: body.email,
+                        password: body.password
+                    }
 
-                return {
-                    message: 'OK',
-                    status: '200',
-                    data: user
-                };
-            } else throw Error('A jelszavak nem egyeznek!');
+                    return {
+                        message: 'OK',
+                        status: '200',
+                        data: user
+                    }
+                } else {
+                    throw new Error("A megadott jelszavak nem egyeznek!")
+                }
+            } else {
+                throw new Error("Ez az email cím már regisztrálva van!");
+            }
         } catch(err) {
             this.setStatus(400);
+
             return {
                 message: 'Error',
                 status: '400',
-                data: err
+                data: err.message
             };
         }
     }
