# server/src/interfaces/newDeveloper.interface.ts
@@ -1,0 +1,4 @@
+export interface NewDeveloper {
+    name: string;
+    email: string;
+}
